[package]
name = "dex"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive", "wrap_help"] }
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"

[[bin]]
name = "dex"
path = "src/cli.rs"

[[bin]]
name = "dex-server"
path = "src/server.rs"
