[package]
name = "dex"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4", features = ["derive", "wrap_help"] }
colored = "2.1.0"
env_logger = "0.11.5"
ipconfig = "0.3.2"
lazy_static = "1.4.0"
log = "0.4.22"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"

[[bin]]
name = "dex"
path = "src/cli.rs"

[[bin]]
name = "dex-server"
path = "src/server.rs"
